--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "package-linux": "rm -rf release-builds && electron-packager . electron-react --overwrite --asar=true --platform=linux --arch=x64 --icon=assets/icons/png/icon.png --prune=true --out=release-builds"
   },
   "dependencies": {
+    "blob-to-buffer": "^1.2.6",
     "electron": "^1.8.2-beta.2",
     "electron-rebuild": "^1.7.3",
     "opencv4nodejs": "^2.37.1",
