--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "install": "electron-rebuild -w opencv4nodejs",
-    "electron-rebuild": "electron-rebuild -w opencv4nodejs",
+    "electron-rebuild": "electron-rebuild -w opencv4nodejs && npm rebuild --runtime=electron --target=1.7.11 --disturl=https://atom.io/download/atom-shell --abi=57",
     "start": "NODE_ENV=develop electron -r babel-register .",
     "lint": "eslint ./renderer --fix && eslint ./main --fix",
     "build": "NODE_ENV=production webpack -p",
@@ -15,13 +15,14 @@
   },
   "dependencies": {
     "blob-to-buffer": "^1.2.6",
-    "electron": "^1.8.2-beta.2",
+    "electron": "^1.7.11",
     "electron-rebuild": "^1.7.3",
     "opencv4nodejs": "^2.37.1",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "recompose": "^0.26.0",
+    "robotjs": "^0.4.7",
     "styled-components": "^2.4.0"
   },
   "devDependencies": {
