feat: basic v2 codebase

--- a/package.json
+++ b/package.json
@@ -4,40 +4,77 @@
   "main": "main.js",
   "license": "MIT",
   "scripts": {
-    "install": "electron-rebuild -w opencv4nodejs",
-    "electron-rebuild": "electron-rebuild -w opencv4nodejs && npm rebuild --runtime=electron --target=1.7.11 --disturl=https://atom.io/download/atom-shell --abi=57",
-    "start": "NODE_ENV=develop electron -r babel-register .",
-    "lint": "eslint ./renderer --fix && eslint ./main --fix",
-    "build": "NODE_ENV=production webpack -p",
-    "package-mac": "rm -rf release-builds && electron-packager  --overwrite --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --out=release-builds",
-    "package-win": "rm -rf release-builds && electron-packager . electron-react --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Electron React\"",
-    "package-linux": "rm -rf release-builds && electron-packager . electron-react --overwrite --asar=true --platform=linux --arch=x64 --icon=assets/icons/png/icon.png --prune=true --out=release-builds"
+    "build-main": "cross-env NODE_ENV=production webpack --config webpack/main.config.js --mode=production",
+    "build-renderer:mainWindow": "cross-env NODE_ENV=production webpack --config webpack/renderer/main/prod.config.js",
+    "build-renderer:gameWindow": "cross-env NODE_ENV=production webpack --config webpack/renderer/game/prod.config.js",
+    "build": "npm run build-main && npm run build-renderer:mainWindow && npm run build-renderer:gameWindow",
+    "start-renderer:dev:mainWindow": "webpack-dev-server --config webpack/renderer/main/dev.config.js",
+    "start-renderer:dev:gameWindow": "webpack-dev-server --config webpack/renderer/game/dev.config.js",
+    "start-renderer:dev": "cross-env npm run start-renderer:dev:mainWindow & cross-env npm run start-renderer:dev:gameWindow",
+    "start-main:dev": "nodemon",
+    "prestart": "npm run build",
+    "start": "electron .",
+    "pack": "npm run build && electron-builder --dir",
+    "dist": "npm run build && electron-builder",
+    "postinstall": "electron-builder install-app-deps",
+    "type-check": "tsc",
+    "format": "prettier --write '*/**/*.{ts,tsx,css,md,json}'",
+    "lint:ts": "eslint 'src/**/*.{ts,tsx}'",
+    "lint:css": "stylelint 'src/**/*.{ts,tsx}'"
   },
   "dependencies": {
-    "blob-to-buffer": "^1.2.6",
-    "electron": "^1.7.11",
-    "electron-rebuild": "^1.7.3",
-    "opencv4nodejs": "^2.37.1",
-    "prop-types": "^15.6.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "recompose": "^0.26.0",
-    "robotjs": "^0.4.7",
-    "styled-components": "^2.4.0"
+    "blob-to-buffer": "^1.2.8",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   },
   "devDependencies": {
-    "@strv/eslint-config-javascript": "^7.9.0",
-    "babel-eslint": "^8.2.1",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^2.0.0-beta.2",
-    "babel-preset-react": "^7.0.0-beta.3",
-    "babel-register": "^7.0.0-beta.3",
-    "clean-webpack-plugin": "^0.1.17",
-    "electron-packager": "^10.1.1",
-    "eslint": "^4.13.1",
-    "uglifyjs-webpack-plugin": "^1.1.6",
-    "webpack": "^3.10.0"
+    "@babel/core": "^7.6.4",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-react": "^7.6.3",
+    "@babel/preset-typescript": "^7.3.3",
+    "@commitlint/cli": "^8.2.0",
+    "@commitlint/config-conventional": "^8.2.0",
+    "@hot-loader/react-dom": "^16.10.2",
+    "@strv/eslint-config-node": "2.1.2",
+    "@strv/eslint-config-react": "3.0.3",
+    "@strv/eslint-config-typescript": "2.0.0",
+    "@strv/stylelint-config-styled-components": "1.1.1",
+    "@types/electron-devtools-installer": "^2.2.0",
+    "@types/react": "^16.8.18",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-hot-loader": "^4.1.0",
+    "@types/webpack-env": "^1.13.3",
+    "@typescript-eslint/parser": "1.13.0",
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
+    "cross-env": "^6.0.3",
+    "css-loader": "^3.2.0",
+    "electron": "4.2.11",
+    "electron-builder": "^21.2.0",
+    "electron-devtools-installer": "^2.2.4",
+    "eslint": "6.5.1",
+    "eslint-config-prettier": "6.4.0",
+    "eslint-plugin-react-hooks": "2.1.2",
+    "eslint-plugin-typescript": "0.14.0",
+    "file-loader": "^4.2.0",
+    "fork-ts-checker-webpack-plugin": "^1.3.4",
+    "html-webpack-plugin": "^3.2.0",
+    "husky": "^3.0.8",
+    "image-webpack-loader": "^6.0.0",
+    "lint-staged": "^9.4.2",
+    "nodemon": "^1.19.3",
+    "prettier": "^1.18.2",
+    "react-hot-loader": "^4.12.15",
+    "source-map-loader": "^0.2.4",
+    "style-loader": "^1.0.0",
+    "stylelint": "^11.1.1",
+    "stylelint-config-prettier": "^6.0.0",
+    "typescript": "^3.6.4",
+    "webpack": "^4.41.1",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.4.1",
+    "webpack-merge": "^4.2.1"
   }
 }
