--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "strict": true,
     "noImplicitAny": true,
     "allowSyntheticDefaultImports": true,
-    "baseUrl": "src"
+    "baseUrl": "src",
+    "skipLibCheck": true
   },
   "include": [
     "**/*.ts",
